// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<list> demo: render [basic] correctly 1`] = `
"<div class=\\"arco-list-wrapper\\">
  <div class=\\"arco-spin arco-list-spin\\">
    <div class=\\"arco-list arco-list-medium arco-list-bordered arco-list-split\\">
      <div class=\\"arco-list-header\\"> List title </div>
      <div class=\\"arco-list-content\\">
        <div class=\\"arco-list-item\\">
          <div class=\\"arco-list-item-main\\">
            <!---->
            <div class=\\"arco-list-item-content\\">Beijing Bytedance Technology Co., Ltd.</div>
            <!---->
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"arco-list-item\\">
          <div class=\\"arco-list-item-main\\">
            <!---->
            <div class=\\"arco-list-item-content\\">Bytedance Technology Co., Ltd.</div>
            <!---->
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"arco-list-item\\">
          <div class=\\"arco-list-item-main\\">
            <!---->
            <div class=\\"arco-list-item-content\\">Beijing Toutiao Technology Co., Ltd.</div>
            <!---->
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"arco-list-item\\">
          <div class=\\"arco-list-item-main\\">
            <!---->
            <div class=\\"arco-list-item-content\\">Beijing Volcengine Technology Co., Ltd.</div>
            <!---->
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"arco-list-item\\">
          <div class=\\"arco-list-item-main\\">
            <!---->
            <div class=\\"arco-list-item-content\\">China Beijing Bytedance Technology Co., Ltd.</div>
            <!---->
          </div>
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`<list> demo: render [grid] correctly 1`] = `
"<div class=\\"arco-list-wrapper\\">
  <div class=\\"arco-spin arco-list-spin\\">
    <div class=\\"arco-list arco-list-medium arco-list-split\\">
      <!---->
      <div class=\\"arco-list-content\\">
        <div class=\\"arco-row arco-row-align-start arco-row-justify-start arco-list-row\\">
          <div class=\\"arco-col arco-col-6 arco-list-col\\">
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-wrapper\\">
                    <div class=\\"arco-spin arco-list-spin\\">
                      <div class=\\"arco-list arco-list-medium arco-list-bordered arco-list-split\\">
                        <div class=\\"arco-list-header\\">Platform</div>
                        <div class=\\"arco-list-content\\">
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">iOS</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">iOS</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">iOS</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                      <!---->
                      <!---->
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class=\\"arco-col arco-col-6 arco-list-col\\">
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-wrapper\\">
                    <div class=\\"arco-spin arco-list-spin\\">
                      <div class=\\"arco-list arco-list-medium arco-list-bordered arco-list-split\\">
                        <div class=\\"arco-list-header\\">Framework</div>
                        <div class=\\"arco-list-content\\">
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">Angular</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">Vue</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">React</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                      <!---->
                      <!---->
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class=\\"arco-col arco-col-6 arco-list-col\\">
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-wrapper\\">
                    <div class=\\"arco-spin arco-list-spin\\">
                      <div class=\\"arco-list arco-list-medium arco-list-bordered arco-list-split\\">
                        <div class=\\"arco-list-header\\">Language</div>
                        <div class=\\"arco-list-content\\">
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">C++</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">JavaScript</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">Python</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                      <!---->
                      <!---->
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
          </div>
          <div class=\\"arco-col arco-col-6 arco-list-col\\">
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-wrapper\\">
                    <div class=\\"arco-spin arco-list-spin\\">
                      <div class=\\"arco-list arco-list-medium arco-list-bordered arco-list-split\\">
                        <div class=\\"arco-list-header\\">Component</div>
                        <div class=\\"arco-list-content\\">
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">Button</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">Breadcrumb</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <div class=\\"arco-list-item\\">
                            <div class=\\"arco-list-item-main\\">
                              <!---->
                              <div class=\\"arco-list-item-content\\">Transfer</div>
                              <!---->
                            </div>
                            <!---->
                            <!---->
                          </div>
                          <!---->
                        </div>
                        <!---->
                      </div>
                      <!---->
                      <!---->
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`<list> demo: render [meta] correctly 1`] = `
"<div class=\\"arco-list-wrapper\\">
  <div class=\\"arco-spin arco-list-spin\\">
    <div class=\\"arco-list arco-list-medium arco-list-bordered arco-list-split\\">
      <!---->
      <div class=\\"arco-list-content\\">
        <div class=\\"arco-list-item\\">
          <div class=\\"arco-list-item-main\\">
            <!---->
            <div class=\\"arco-list-item-content\\">
              <div class=\\"arco-list-item-meta\\">
                <div class=\\"arco-list-item-meta-avatar\\">
                  <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"><img alt=\\"avatar\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp\\"></span>
                    <!--v-if-->
                  </div>
                </div>
                <div class=\\"arco-list-item-meta-content\\">
                  <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                  <div class=\\"arco-list-item-meta-description\\">Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                </div>
              </div>
            </div>
            <!---->
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"arco-list-item\\">
          <div class=\\"arco-list-item-main\\">
            <!---->
            <div class=\\"arco-list-item-content\\">
              <div class=\\"arco-list-item-meta\\">
                <div class=\\"arco-list-item-meta-avatar\\">
                  <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"><img alt=\\"avatar\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp\\"></span>
                    <!--v-if-->
                  </div>
                </div>
                <div class=\\"arco-list-item-meta-content\\">
                  <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                  <div class=\\"arco-list-item-meta-description\\">Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                </div>
              </div>
            </div>
            <!---->
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"arco-list-item\\">
          <div class=\\"arco-list-item-main\\">
            <!---->
            <div class=\\"arco-list-item-content\\">
              <div class=\\"arco-list-item-meta\\">
                <div class=\\"arco-list-item-meta-avatar\\">
                  <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"><img alt=\\"avatar\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp\\"></span>
                    <!--v-if-->
                  </div>
                </div>
                <div class=\\"arco-list-item-meta-content\\">
                  <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                  <div class=\\"arco-list-item-meta-description\\">Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                </div>
              </div>
            </div>
            <!---->
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"arco-list-item\\">
          <div class=\\"arco-list-item-main\\">
            <!---->
            <div class=\\"arco-list-item-content\\">
              <div class=\\"arco-list-item-meta\\">
                <div class=\\"arco-list-item-meta-avatar\\">
                  <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"><img alt=\\"avatar\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp\\"></span>
                    <!--v-if-->
                  </div>
                </div>
                <div class=\\"arco-list-item-meta-content\\">
                  <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                  <div class=\\"arco-list-item-meta-description\\">Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                </div>
              </div>
            </div>
            <!---->
          </div>
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`<list> demo: render [scroll] correctly 1`] = `
"<div class=\\"arco-list-wrapper\\">
  <div class=\\"arco-spin arco-list-spin\\">
    <div class=\\"arco-list arco-list-medium arco-list-bordered arco-list-split\\" style=\\"max-height: 200px;\\">
      <div class=\\"arco-list-header\\"> List title </div>
      <div class=\\"arco-list-content\\">
        <!---->
        <div class=\\"arco-list-item arco-list-scroll-loading\\">
          <div class=\\"arco-spin\\">
            <div class=\\"arco-spin-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-loading arco-icon-spin\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
                <path d=\\"M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6\\"></path>
              </svg></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`<list> demo: render [size] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\">
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-radio-group-button arco-radio-group-size-undefined arco-radio-group-direction-horizontal\\"><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"small\\"><span class=\\"arco-radio-button-content\\">Small</span></label><label class=\\"arco-radio-button arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"medium\\"><span class=\\"arco-radio-button-content\\">Medium</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"large\\"><span class=\\"arco-radio-button-content\\">Large</span></label></span></div>
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-list-wrapper\\">
      <div class=\\"arco-spin arco-list-spin\\">
        <div class=\\"arco-list arco-list-medium arco-list-bordered arco-list-split\\">
          <div class=\\"arco-list-header\\"> List title </div>
          <div class=\\"arco-list-content\\">
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">Beijing Bytedance Technology Co., Ltd.</div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">Bytedance Technology Co., Ltd.</div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">Beijing Toutiao Technology Co., Ltd.</div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">Beijing Volcengine Technology Co., Ltd.</div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">China Beijing Bytedance Technology Co., Ltd.</div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>"
`;

exports[`<list> demo: render [virtual-list] correctly 1`] = `
"<h3>10000 items</h3>
<div class=\\"arco-list-wrapper\\" style=\\"width: 600px;\\">
  <div class=\\"arco-spin arco-list-spin\\">
    <div class=\\"arco-list arco-list-medium arco-list-bordered arco-list-split\\">
      <!---->
      <div class=\\"arco-list-content arco-list-virtual\\" style=\\"overflow-y: auto; max-height: 560px;\\">
        <div style=\\"height: 320000px; position: relative; overflow: hidden; z-index: 0;\\">
          <div style=\\"display: flex; flex-direction: column; transform: translateY(0px); position: absolute; left: 0px; right: 0px; top: 0px;\\">
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00000) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00001) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00002) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00003) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00004) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00005) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00006) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00007) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00008) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00009) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00010) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00011) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00012) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00013) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00014) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00015) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00016) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00017) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
            <div class=\\"arco-list-item\\">
              <div class=\\"arco-list-item-main\\">
                <!---->
                <div class=\\"arco-list-item-content\\">
                  <div class=\\"arco-list-item-meta\\">
                    <div class=\\"arco-list-item-meta-avatar\\">
                      <div class=\\"arco-avatar arco-avatar-square\\"><span class=\\"arco-avatar-text\\"> A </span>
                        <!--v-if-->
                      </div>
                    </div>
                    <div class=\\"arco-list-item-meta-content\\">
                      <div class=\\"arco-list-item-meta-title\\">Beijing Bytedance Technology Co., Ltd.</div>
                      <div class=\\"arco-list-item-meta-description\\">(00018) Beijing ByteDance Technology Co., Ltd. is an enterprise located in China.</div>
                    </div>
                  </div>
                </div>
                <!---->
              </div>
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;
